# EEGlass

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Dockerfile.download-test  README.md  bun-env.d.ts  bun.lockb  docker-compose.yml  main.py  package.json  pyproject.toml  screenshot.py  screenshot_v2.py  stuff  tsconfig.json
backend/: Dockerfile  Dockerfile.dataset-downloader  app.db  app.py  config.py
backend/database/: db_service.py  models.py
backend/experiments_xeegnet/: explore_data.ipynb  generate_models.ipynb  generate_splits.ipynb  test_matrix_profile.ipynb  test_models.ipynb
backend/experiments_xeegnet/data_loading_expirements/: load_data_pythonfun.py
backend/experiments_xeegnet/shallownetXAI_main/: .gitignore  AnalyticalCalculation.ipynb  LICENSE  ModelTraining.ipynb  README.md  (+2 more)
backend/ml/: attribution.py  data_splits.json  model.py  model_registry.py  model_vars.py  train.py
backend/models/: clustering.py  dataset.py  model_utils.py  model_vars.py  shapley.py  timeseries.py  train.py
backend/pydantic_models/: band_power.py  chatbot.py  class_evidence.py  embeddings.py  feature_importance.py  inference.py  model_info.py  prediction_cache.py  settings.py  timeseries.py  topology.py
backend/routers/: __init__.py  chat.py  clustering.py  dataset.py  debug.py  model_router.py  settings_router.py  shapley.py  timeseries.py
backend/scripts/: download-dataset.sh
backend/services/: clustering_service.py  embedding_service.py  feature_importance_service.py  model_errors.py  model_service.py  patient_aggregation_service.py  prediction_cache_artifacts.py  prediction_cache_band_power.py  prediction_cache_service.py  prediction_cache_summary.py  prediction_cache_writers.py  shapley_service.py  timeseries_service.py
backend/tests/: __main__.py  test_derivative_model_pipeline.py  test_feature_importance_service.py
backend/utils/: data_utils.py  dataset_storage.py  logger.py  mne_logging.py
frontend/: APITester.tsx  App.tsx  Dockerfile  clustersinfocus.html  frontend.tsx  index.css  index.html  index.ts  neurodegenvis.html  nginx.conf  tool-standalone.css  toolRegistry.tsx  tsconfig.base.json
frontend/shared/: runtimeConfig.ts
frontend/shell/: ErrorBoundary.tsx  ShellViews.tsx
frontend/src/: App.tsx  main.tsx
(+403 files in other folders)
