[project]
name = "allinoneeg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "dotenv>=0.9.9",
  "fastapi[standard]>=0.136.1",
  "mne>=1.12.1",
  "openai>=2.37.0",
  "selfeeg[interactive]>=0.2.1",
]

[tool.ruff]
line-length = 120
exclude = [
  "backend/experiments_xeegnet",
  ".venv",
]

[dependency-groups]
dev = [
  "ipykernel>=7.2.0",
  "ruff>=0.15.13",
  "selenium>=4.44.0",
]
