[project]
name = "allinoneeg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi[standard]>=0.136.3",
  "mne>=1.12.1",
  "python-dotenv>=1.2.2",
  "selfeeg>=0.2.1",
  "shap>=0.50.0",
  "torch>=2.12.0",
  "torchaudio>=2.11.0",
  "xgboost>=3.2.0",
]

[tool.ruff]
line-length = 120
exclude = ["backend/experiments_xeegnet", ".venv"]

[tool.uv]
index = [{ name = "pytorch-cpu", url = "https://download.pytorch.org/whl/cpu", explicit = true }]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
torchaudio = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]

[dependency-groups]
dev = [
  "ipykernel>=7.2.0",
  "isort>=8.0.1",
  "mass-ts>=0.1.4",
  "ruff>=0.15.15",
  "selenium>=4.44.0",
  "selfeeg[interactive]>=0.2.1",
]
